# Project-SOS-Backend

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  docker-compose.yml  vcpkg.json
.claude/: settings.local.json
.claude/skills/: SKILLS.md
.claude/skills/analyze/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/create-skill/: SKILL.md
.claude/skills/debug/: SKILL.md
.claude/skills/diagnose/: SKILL.md
.claude/skills/implement/: SKILL.md
.claude/skills/plan-create/: SKILL.md
.claude/skills/plan-edit/: SKILL.md
.claude/skills/plan-execute/: SKILL.md
.claude/skills/port-skill/: SKILL.md
.claude/skills/review-code/: SKILL.md
.claude/skills/review-comments/: SKILL.md
.claude/skills/review-design/: SKILL.md
.claude/skills/review-plan/: SKILL.md
.claude/skills/review-skill/: SKILL.md
.claude/skills/sync-comments/: SKILL.md
.claude/skills/sync-docs/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/update-docs/: SKILL.md
config/: server_config.json
docs/: Documentation-Checklist.md  로깅 파이프라인.md  시스템 아키텍처.md
docs/Checklists/: pattern-search-guide.md  review-code-checklist.md
docs/Plans/: 계획-작성-가이드.md
docs/Plans/Completed/: 구현 우선순위.md
docs/Plans/chat-message-logging/: execution-log.md  orchestration.md  phase-1-schema-and-logging.md  phase-2-vector-pipeline.md  phase-3-grafana-and-docs.md  summary.md
docs/Plans/로깅/: 로깅 Tier2 ClickHouse Grafana.md
docs/Plans/룸 서버/: C++ 룸 서버 구축 계획.md
docs/Systems/: Chat Server.md  Room Server.md  common 라이브러리.md  인프라 구성.md  테스트.md
docs/WorkLog/2026-03-16/: 로깅 파이프라인 구축.md  인프라 리뷰 및 Vector 테스트 추가.md
docs/WorkLog/2026-03-18/: CMake 빌드 체계 구성.md  common 라이브러리 구현.md
docs/WorkLog/2026-03-19/: Room Server 핵심 구현.md
docs/WorkLog/2026-03-21/: 유닛 테스트 추가.md
docs/WorkLog/2026-03-22/: Room Server Redis 연동.md
docs/WorkLog/2026-03-23/: Chat Server 핵심 구현.md  Room Server Chat 연동.md  common 라이브러리 확장.md  세션 채널 통합.md  수동 테스트 방법.md
docs/WorkLog/2026-03-24/: 로깅 통합 운영.md
docs/WorkLog/2026-04-13/: Grafana 대시보드 쿼리 수정 및 패널 정리.md
docs/계획/: 구현 우선순위.md
docs/계획/대기열 서버/: C++ 대기열 서버 구축 계획.md
infra/clickhouse/: init.sql  users.xml
infra/grafana/: dashboards.yml  datasources.yml
infra/vector/: vector-tests.toml  vector.toml
proto/: chat.proto  room.proto
scripts/: chat_pb2.py  proto_client.py  room_pb2.py  test_chat.py  test_load.py  test_room.py
src/chat/: CMakeLists.txt  main.cpp
src/chat/channel/: ChannelManager.cpp  ChannelManager.h
src/chat/internal/: InternalChannel.cpp  InternalChannel.h  InternalSession.cpp  InternalSession.h
src/chat/server/: ChatServer.cpp  ChatServer.h  ChatSession.cpp  ChatSession.h
src/common/: CMakeLists.txt
src/common/protocol/: Codec.h
src/common/ratelimit/: RateLimiter.cpp  RateLimiter.h
src/common/redis/: RedisClient.cpp  RedisClient.h  SessionStore.cpp  SessionStore.h
src/common/util/: Config.cpp  Config.h  Logger.cpp  Logger.h  UuidGenerator.cpp  UuidGenerator.h
src/room/: CMakeLists.txt  main.cpp
src/room/internal/: ChatServerChannel.cpp  ChatServerChannel.h  GameServerChannel.cpp  GameServerChannel.h  GameServerSession.cpp  GameServerSession.h
src/room/room/: Room.cpp  Room.h  RoomManager.cpp  RoomManager.h
src/room/server/: ClientSession.cpp  ClientSession.h  RoomServer.cpp  RoomServer.h
tests/: CMakeLists.txt  test_Codec.cpp  test_Config.cpp  test_Room.cpp  test_UuidGenerator.cpp
(+33 files in other folders)
